files/router/rules.v4
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT DROP


# accept loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT


# accept SSH
-A INPUT -i local -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT


# accept DNS
-A INPUT -s 8.8.8.8/32 -p tcp -m tcp --sport 853 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -p tcp -m tcp --dport 853 -j ACCEPT

-A INPUT -s 8.8.4.4/32 -p tcp -m tcp --sport 853 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 8.8.4.4/32 -p tcp -m tcp --dport 853 -j ACCEPT


# forwarding
# -A FORWARD -i local -o internet -j ACCEPT
# -A FORWARD -i internet -o local -m state --state RELATED,ESTABLISHED -j ACCEPT

# -A FORWARD -i wifi2 -o internet -j ACCEPT
# -A FORWARD -i internet -o wifi2 -m state --state RELATED,ESTABLISHED -j ACCEPT

# -A FORWARD -i wifi3 -o internet -j ACCEPT
# -A FORWARD -i internet -o wifi3 -m state --state RELATED,ESTABLISHED -j ACCEPT


# squid prerouting
-A PREROUTING -i local -p tcp --dport 80 -j REDIRECT --to-port 3128
-A PREROUTING -i local -p tcp --dport 443 -j REDIRECT --to-port 3128
-A PREROUTING -i local -p tcp --dport 22 -j REDIRECT --to-port 3128


COMMIT
